infra/traefik_NOTWORKING/NOT_WORKING/02-traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.1
          volumeMounts:
            - name: config
              mountPath: /etc/traefik/traefik.yaml
              subPath: traefik.yaml
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8081
      volumes:
        - name: config
          configMap:
            name: traefik-config
